aligning image correctly

--- a/home.css
+++ b/home.css
@@ -301,6 +301,32 @@ h1::after {
 
 }
 
+.popup-img{
+    position: fixed;
+    top: 0; left: 0;
+    background-color: rgba(0, 0, 0, 0.501);
+    height: 100%;
+    width: 100%;
+    z-index: 100;
+}
+
+.popup-img img{
+    
+    height: 80%;
+    width: 80%;
+    object-fit: cover;
+}
+
+ .popup-img span{
+    position: absolute;
+    top: 0; right: 10px;
+    font-size: 60px;
+    font-weight: bolder;
+    color: #fff;
+    cursor: pointer;
+    z-index: 100;
+}
+
 
 
 
